<resources>
    <string name="app_name" translatable="false">RepoMovies</string>
    <string name="msg_error_on_load_images">Unable to load images</string>
    <string name="msg_has_no_more_data">Has no more data available</string>
    <string name="msg_movie_marked_as_favorite">Movie added to favorites</string>
    <string name="msg_movie_unmarked_as_favorite">Movie removed from favorites</string>

    <string name="label_original_title">Original Title</string>
    <string name="label_overview">Overview</string>
    <string name="label_rate">Rate</string>
    <string name="label_popularity">Popularity</string>
    <string name="label_gender">Gender</string>
    <string name="label_movie_length">Movie Length</string>
    <string name="label_release_date">Release Date</string>
    <string name="label_videos">Videos</string>
    <string name="label_reviews">Reviews</string>
    <string name="label_by">By</string>
    <string name="label_see_more">See more</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>

    <string name="title_sort_by_popular">By Most Popular</string>
    <string name="title_sort_by_rated">By Highest-rated</string>
    <string name="title_sort_by_favorites">By Favorites</string>
    <string name="title_language_pt">Portuguese</string>
    <string name="title_language_us">English</string>
    <string name="title_sort">Sort</string>
    <string name="title_language">Language</string>
    <string name="title_preferences">Preferences</string>


    <string name="movie_poster_trasition_name" translatable="false">movie_poster</string>
    <string name="movie_name_trasition_name" translatable="false">movie_name</string>
    <string name="movie_overview_trasition_name" translatable="false">movie_overview</string>

    <string name="ex_movie_title" translatable="false">Fantastic Beasts and Where to Find Them</string>
    <string name="ex_movie_overview" translatable="false">From DC Comics comes the Suicide Squad, an antihero team of incarcerated supervillains who act as deniable assets for the United States government, undertaking high-risk black ops missions in exchange for commuted prison sentences.</string>
    <string name="ex_movie_gender" translatable="false">Action | Horror</string>
    <string name="ex_popularity" translatable="false">52.564642</string>
    <string name="ex_movie_length" translatable="false">1h31min</string>
    <string name="ex_movie_release_date" translatable="false">2016-11-16</string>

</resources>
