<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        app:theme="@style/MovieToolbarTheme"
        android:background="@android:color/transparent">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:statusBarScrim="@android:color/transparent"
            app:expandedTitleMarginEnd="@dimen/article_keylines"
            app:expandedTitleMarginStart="@dimen/md_keylines"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:background="@drawable/example"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax" />

                <ProgressBar
                    android:id="@+id/pbImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </FrameLayout>


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/article_keylines"
            android:paddingRight="@dimen/md_keylines"
            android:paddingTop="@dimen/md_keylines"
            android:animateLayoutChanges="true">

            <TextView
                style="@style/MovieDetailTitle"
                android:layout_width="wrap_content"
                android:text="@string/label_original_title" />

            <TextView
                android:id="@+id/tvOriginalTitle"
                style="@style/MovieDetailDescription"
                tools:text="@string/ex_movie_title" />

            <TextView
                style="@style/MovieDetailTitle"
                android:text="@string/label_overview" />

            <TextView
                android:id="@+id/tvOverview"
                style="@style/MovieDetailDescription"
                tools:text="@string/ex_movie_overview" />

            <TextView
                style="@style/MovieDetailTitle"
                android:text="@string/label_gender"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tvGender"
                style="@style/MovieDetailDescription"
                tools:text="@string/ex_movie_gender"
                android:visibility="gone"/>

            <TextView
                style="@style/MovieDetailTitle"
                android:text="@string/label_popularity" />

            <TextView
                android:id="@+id/tvPopularity"
                style="@style/MovieDetailDescription"
                tools:text="@string/ex_popularity" />

            <TextView
                style="@style/MovieDetailTitle"
                android:text="@string/label_rate" />

            <RatingBar
                android:id="@+id/rbMovieStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleIndicator"
                android:numStars="5"
                android:stepSize="0.5"
                android:isIndicator="true"
                android:layout_marginBottom="@dimen/md_keylines"
                tools:rating="3.5" />

            <TextView
                style="@style/MovieDetailTitle"
                android:text="@string/label_release_date" />

            <TextView
                android:id="@+id/tvReleaseDate"
                style="@style/MovieDetailDescription"
                tools:text="@string/ex_movie_release_date" />

            <TextView
                android:id="@+id/tvVideos"
                style="@style/MovieDetailTitle"
                android:text="@string/label_videos"
                android:visibility="gone"
                tools:visibility="visible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvVideos"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:clipToPadding="false"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tvReviews"
                style="@style/MovieDetailTitle"
                android:text="@string/label_reviews"
                android:visibility="gone"
                tools:visibility="visible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvReviews"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:clipToPadding="false"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fbFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/md_keylines"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        tools:src="@drawable/ic_favorite_filled" />

</android.support.design.widget.CoordinatorLayout>